--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tailwindcss/postcss": "^4.0.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
